# C-to-befunge93

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  note.txt  out.b93r  source.c  test.py  tree.py
.github/workflows/: main.yml
befunge_libc/: _bf_float.c  _bf_float.h  stdint.h  stdio.c  stdlib.c  stdlib.h
befunge_libc/internal/: _bf_bitwise.c  _bf_bitwise.h  _bf_float.c
befunge_libc/softfloat/: f16_div.c  f16_sqrt.c  s_approxRecipSqrt32_1.c
befunge_libc/softfloat/include/: platform.h
befunge_libc/stdlib/: _bf_float.c  stdio.h  stdlib.c  string.c  string.h
example_programs/: snake-with-graphics.c  snake.c
src/: builder.rs  c_compiler.rs  codegen.rs  errors.rs  ir.rs  main.rs  number_generation.rs  passes.rs  softfloat_files.rs
