cargo-features = [
  "profile-rustflags", 
  #"codegen-backend"
  ]

[package]
name = "c-to-befunge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
codespan-reporting = "0.12.0"
include_dir = "0.7.4"
lang-c = "0.15.1"
prime_factorization = "1.0.5"
thiserror = "2.0.12"
walkdir = "2.5.0"

[profile.dev]
#codegen-backend = "cranelift"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
debug = 0
strip = "debuginfo"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
#cargo = "warn"
clone_on_ref_ptr = "warn"
needless_raw_string_hashes = "allow"
needless_raw_strings = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
