[package]
name = "c-to-befunge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
codespan-reporting = "0.12.0"
include_dir = "0.7.4"
indexmap = "2.11.0"
lang-c = { git = "https://github.com/vickenty/lang-c.git" }
parking_lot = "0.12.4"
prime_factorization = "1.0.5"
rand = "0.9.2"
thiserror = "2.0.12"
walkdir = "2.5.0"

[profile.dev]
debug = 0
strip = "debuginfo"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
#cargo = "warn"
clone_on_ref_ptr = "warn"
needless_raw_string_hashes = "allow"
needless_raw_strings = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
